// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReportUpload rendering render with Props 1`] = `
<TabContainer
  className="report-upload"
>
  <TabHeader
    exitCode="exit 0"
    onDownload={[Function]}
    onRestart={[Function]}
  />
  <TabBody
    completed={0}
    error={null}
    exitCode="exit 0"
    logs={
      Array [
        "No running process",
      ]
    }
  />
</TabContainer>
`;

exports[`ReportUpload rendering render without Props 1`] = `
<TabContainer
  className="report-upload"
>
  <TabHeader
    exitCode=""
    onDownload={[Function]}
    onRestart={[Function]}
  />
  <TabBody
    completed={0}
    error={null}
    exitCode=""
    logs={null}
  />
</TabContainer>
`;
